compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__bit_array_utf8_and_size.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "let x = <<\"test\":size(1)>> x"
---
----- SOURCE CODE
let x = <<"test":size(1)>> x

----- ERROR
error: Invalid bit array segment
  ┌─ /src/one/two.gleam:1:18
  │
1 │ let x = <<"test":size(1)>> x
  │                  ^^^^^^^ Size cannot be specified here

Hint: utf8 segments have an automatic size.
See: https://tour.gleam.run/data-types/bit-arrays/
